--- a/resume/main.tex
+++ b/resume/main.tex
@@ -106,16 +106,16 @@
 \cvsect{Projects}
 \begin{entrylist}
     \entry
-        {Technical \newline Leader}
+    {Technical \newline Leader}
 		{Media Communications Mesh}
 		{https://github.com/OpenVisualCloud/Media-Communications-Mesh}
-        {Led the development of an efficient, low-latency, and high-throughput media transport service mesh framework, optimizing for microservices architectures. Collaborated with architects to fine-tune design and led project development and management, ensuring milestones were met. Implemented key features such as zero-copy transportation, SMPTE 2110 standards, NMOS integration, and Kubernetes orchestration.}
+        {Led the development of an efficient, low-latency, and high-throughput media transport service mesh framework, optimizing for microservices architectures. Collaborated with architects to fine-tune design and led project development and management, ensuring milestones were met. Implemented key features such as \textbf{zero-copy} transportation, SMPTE 2110 standards, NMOS integration, and Kubernetes orchestration.}
     \entry
         {Technical \newline Leader}
 		{E2E Media Pipeline}
 		{}
 		{Led the development of the "E2E Media Pipeline" program, delivering a benchmarking tool to develop a reference media pipeline for Intel platforms.
-        Developed key features using the FFmpeg "libav" library, including performance and quality benchmarking, parallel running model, and high configurability.
+        Developed key features using the \textbf{FFmpeg library}, including performance and quality benchmarking, parallel running model, and high configurability.
         Instrumental in analyzing media performance on existing and next-gen "Xeon" platforms.}
 	\entry
         {Technical \newline Leader}
@@ -128,7 +128,7 @@
 		{IPU System Test Automation}
 		{}
         {Designed and implemented an automated testing framework for Intel's Image Processing Unit (IPU) system,
-        achieving and maintaining automation rate over 90\% across 2,000+ test cases.
+        achieving and maintaining automation rate over \textbf{90\%} across \textbf{2,000+} test cases.
         Developed innovative automated solutions for critical IPU tests, such as ATE bit-match, static analysis (Klocwork/Protex/BDBA),
         and compliance testing, substantially increasing test efficiency and reliability.}
     \entry
@@ -170,8 +170,8 @@
 \begin{entrylist}
 	\entry
         {11/2021 -- Present}
-		{System Software Development Engineer, NEX (Network \& Edge Group)}
-		{Intel Corporation}
+		{System Software Development Engineer}
+		{NEX, Intel Corporation}
 		{\vspace{-10pt}
         \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
             \item Develop software about multi-media, video codec, and cloud networking.
@@ -180,17 +180,27 @@
         \texttt{C} \slashsep \texttt{C++} \slashsep \texttt{Service Mesh} \slashsep \texttt{Kubernetes} \slashsep \texttt{SMPTE 2110}  \slashsep \texttt{NMOS} \slashsep \texttt{FFmpeg}}
 	\entry
 		{2/2011 -- 11/2021}
-		{Senior Software Engineer, ICG (Imaging and Camera Technologies Group)}
-		{Intel Corporation}
+		{Senior Software Engineer}
+		{ICG, Intel Corporation}
 		{\vspace{-10pt}
         \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
             \item Engaged in software development and validation for “Camera \& Imaging” system, including design and develop test framework and test tools, test automation, validation project management etc.
         \end{itemize} 
         \texttt{C} \slashsep \texttt{Python} \slashsep \texttt{Gtk+} \slashsep \texttt{OpenCV} \slashsep \texttt{Android} \slashsep \texttt{Agile}}
+    \entry
+		{11/2009 -- 2/2011}
+		{Software Engineer}
+		{onsite Intel, hiSoft Technology International Ltd.}
+		{\vspace{-10pt}
+        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+            \item Ported applications and validated for Moblin OS.
+            \item Developed IPU system tests for functionality, performance and stability on MeeGo OS.
+        \end{itemize}
+        \texttt{Linux} \slashsep \texttt{C} \slashsep \texttt{Bash}}
 	\entry
 		{4/2009 -- 11/2009}
 		{Software Engineer}
-		{Lenovo Corporate Research \& Development}
+		{onsite Lenovo, Beijing SinoCom-ArtM Technology Co., Ltd.}
 		{\vspace{-10pt}
         \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
             \item SMS client, OSD components on “Skylight” mobile device.
@@ -217,6 +227,15 @@
         \end{itemize}
         \texttt{Linux} \slashsep \texttt{C} \slashsep \texttt{Gtk+} \slashsep \texttt{SNMP} \slashsep \texttt{Oracle9i} \slashsep \texttt{MS VC++} \slashsep \texttt{DirectX}}
 	\entry
+		{6/2002 -- 5/2004}
+		{Home Study}
+		{}
+		{\vspace{-10pt}
+        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+            \item Prepared for postgraduate entrance examination
+        \end{itemize}
+        }
+    \entry
 		{7/2000 -- 6/2002}
 		{Software Engineer}
 		{COSCO Bulk Carrier CO., LTD.}
@@ -251,7 +270,7 @@
 	\cvsect{Languages}
     \vspace{-6pt}
     
-    \hspace{26mm} \textbf{English} - proficient, \textbf{Chinese} - native
+    \hspace{22mm} \textbf{English} - proficient, \textbf{Chinese} - native
 
 %----------------------------------------------------------------------------------------
 
